--- a/webcompare.html
+++ b/webcompare.html
@@ -38,33 +38,25 @@
                 You must have JavaScript enabled to use WebCompare
             </p></noscript>
             <h1>
-                Result Sets
+                WebCompare Results
             </h1>
-            <h2>
-                PHB Statistics for your TPS Report
-            </h2>
-            <div id="statsTable">
-                Status table should go here
+            <div id="statsTable"></div>
+
+            <dl>
+                <dt>Filter Results:</dt>
+                <dd class="filters">
+                    <input type="checkbox" id="GoodResult"><label for="GoodResult">Good</label>
+                    <input type="checkbox" id="ErrorResult" checked="checked"><label for="ErrorResult">Error</label>
+                    <input type="checkbox" id="BadOriginResult"><label for="BadOriginResult">Bad Origin</label>
+                    <input type="checkbox" id="BadTargetResult" checked="checked"><label for="BadTargetResult">Bad Target</label>
+                </dd>
+            </dl>
+            <div id="resultlist">
+                Loading…
             </div>
-            <h2>
-                Result Details
-            </h2>
-            <p>
-                Select which types of result you want to view and click the Filter! button.
-            </p>
-            <p>
-                <input type="checkbox" id="GoodResult">Good
-                <input type="checkbox" id="ErrorResult" checked="checked">Error
-                <input type="checkbox" id="BadOriginResult">Bad Origin
-                <input type="checkbox" id="BadTargetResult" checked="checked">Bad Target
-                <input type="submit" id="filter" value="Filter!">
-            </p>
-            <p>
+            <p class="help">
                 Click Origin/Target Code to see the page, and Origin/Target Errors count to display a list of the errors.
             </p>
-            <div id="resultlist">
-                Result List should go here
-            </div>
         </div>
     </body>
 </html>
