Fixed JS for filter updates - YUI isn't jQuery…

--- a/webcompare.html
+++ b/webcompare.html
@@ -44,7 +44,7 @@
 
             <dl>
                 <dt>Filter Results:</dt>
-                <dd class="filters">
+                <dd id="filters">
                     <input type="checkbox" id="GoodResult"><label for="GoodResult">Good</label>
                     <input type="checkbox" id="ErrorResult" checked="checked"><label for="ErrorResult">Error</label>
                     <input type="checkbox" id="BadOriginResult"><label for="BadOriginResult">Bad Origin</label>
